--- a/data-vis-resources.Rmd
+++ b/data-vis-resources.Rmd
@@ -3,6 +3,11 @@ title: "Resources"
 output: html_document
 ---
 
+## Data Visualiztion by Kieran Healy
+
+Official book link (for purchase): https://kieranhealy.org/publications/dataviz/
+Official link for text of an earlier, incomplete draft: https://socviz.co/index.html#preface
+
 
 ## Take A Sad Plot & Make It Better
 
