--- a/about.Rmd
+++ b/about.Rmd
@@ -18,12 +18,12 @@ The link to all the labs is here:
 
 Who am I?
 
-  * Alison Hill
-  * <a href = "https://github.com/apreshill/"><i class="fa fa-github"> GitHub</i></a>
-  * <a href = "https://twitter.com/apreshill"><i class="fa fa-twitter"> Twitter</i></a>
-  * <a href = "https://alison.rbind.io"><i class="fa fa-home"> Personal Website</i></a>
+  * Kevin Watanabe-Smith
+  * <a href = "https://github.com/WatanabeSmith/"><i class="fa fa-github"> GitHub</i></a>
+  * <a href = "https://twitter.com/WatanabeSmith"><i class="fa fa-twitter"> Twitter</i></a>
+  * <a href = "https://watanabesmith.rbind.io/"><i class="fa fa-home"> Personal Website</i></a>
 
 Materials initially created for [CS631: Principles & Practice of Data Visualization (Spring 2018)](http://cslu.ohsu.edu/~bedricks/courses/cs631/).
 
-Course Directors: Drs. Steven Bedrick, Jackie Wirz, and Alison Hill.
+Course Directors: Drs. Steven Bedrick, Jackie Wirz, and Kevin Watanabe-Smith.
 
